bootstrapでデータ挿入やめる

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,8 +86,6 @@ date.format=yyyy-MM-dd
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
-prod.db=mysql://root@127.0.0.1/hell
-
 
 #
 # To connect to a local PostgreSQL9 database, use:
@@ -218,3 +216,4 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+%prod.db=mysql://root@127.0.0.1/hell
