--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,5 +215,5 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
-
+db=mysql://root@127.0.0.1/hell
 %prod.db=mysql://root@127.0.0.1/hell
